--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,24 @@
 annotated-types==0.5.0
 anyio==3.7.1
+b==1.0.0
 certifi==2023.5.7
 click==8.1.5
 dnspython==2.4.0
 email-validator==2.0.0.post2
+environs==9.5.0
 exceptiongroup==1.1.2
 fastapi==0.100.0
+fastapi_cors==0.0.6
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.3
 idna==3.4
+jsonref==1.1.0
+marshmallow==3.19.0
+packaging==23.1
 pydantic==1.10.11
 pydantic_core==2.3.0
+python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 sqlalchemy2-stubs==0.0.2a35
