--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.12.0
 annotated-types==0.5.0
 anyio==3.7.1
 b==1.0.0
@@ -12,17 +13,24 @@ fastapi_cors==0.0.6
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.3
+httpx==0.24.1
 idna==3.4
+iniconfig==2.0.0
 jsonref==1.1.0
+Mako==1.2.4
+MarkupSafe==2.1.3
 marshmallow==3.19.0
 packaging==23.1
+pluggy==1.3.0
 pydantic==1.10.11
 pydantic_core==2.3.0
+pytest==7.4.1
 python-dotenv==1.0.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 sqlalchemy2-stubs==0.0.2a35
 sqlmodel==0.0.8
 starlette==0.27.0
+tomli==2.0.1
 typing_extensions==4.7.1
 uvicorn==0.23.1
