--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ MarkupSafe==2.1.3
 marshmallow==3.19.0
 packaging==23.1
 pluggy==1.3.0
+psycopg2==2.9.9
 pydantic==1.10.11
 pydantic_core==2.3.0
 pytest==7.4.1
