--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,18 @@
 FROM python:3.11
 
-WORKDIR /app
+WORKDIR /app/backend
+
+ENV POETRY_VIRTUALENVS_CREATE=false \
+    POETRY_CACHE_DIR='/var/cache/pypoetry' \
+    POETRY_HOME='/usr/local'
+
+
+RUN curl -sSL https://install.python-poetry.org | python3 -
+
+COPY poetry.lock pyproject.toml /app/backend/
+
+RUN poetry install
 
 COPY . /app/backend/
-
-RUN pip install -r /app/backend/requirements.txt
 
 #CMD ["uvicorn", "API.main:app", "--host", "0.0.0.0", "--port", "8000"]
